--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "hbs": "^4.2.0",
     "mongoose": "^6.1.2"
   }
 }
